--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
       <h1>You are Online!</h1>
       <p>It's time to create an amazing Progressive Web App!</p>
       <br/>
-      <input type="text" id="title" value="This is the Title" />
-      <input type="text" id="text" value="Lorem ipsum dolar sit amet" />
-      <input type="text" id="url" value="https://github.com/evanBurg/pwa-boilerplate" />
+      <input type="text" id="title" value="" />
+      <input type="text" id="text" value="" />
+      <input type="text" id="url" value="" />
        </div>
   </body>
 
