--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
       <h1>You are Online!</h1>
       <p>It's time to create an amazing Progressive Web App!</p>
       <br/>
-      <input type="text" id="title" value="" />
-      <input type="text" id="text" value="" />
-      <input type="text" id="url" value="" />
+      <input type="text" id="title" value="it is title" />
+      <input type="text" id="text" value="text is here" />
+      <input type="text" id="url" value="it is for url" />
        </div>
   </body>
 
